<resources>
    <string name="app_name">车利多</string>
    <string name="main_store_name">商城</string>
    <string name="main_cart_name">购物车</string>
    <string name="main_score_store_name">积分商城</string>
    <string name="main_mine_name">个人中心</string>
    <string name="login_hint_phone">请输入手机号</string>
    <string name="login_hint_pwd_6_15">请输入6~15位密码</string>
    <string name="login_hint_pwd">请输入密码</string>
    <string name="forget_pwd_hint_confirm_pwd">请确认密码</string>
    <string name="login_text_login">登录</string>
    <string name="login_text_forget_pwd">忘记密码</string>
    <string name="login_error_phone">手机号码格式不正确</string>
    <string name="login_error_pwd">请输入密码!</string>
    <string name="forget_pwd_error_pwd2">请再次输入密码!</string>
    <string name="forget_pwd_pwd_no_equal">两次密码不一致</string>
    <string name="login_hint_referrer">请输入邀请人手机号</string>
    <string name="login_hint_weChat">请输入微信号</string>
    <string name="login_hint_code">请输入验证码</string>
    <string name="login_text_register">立即注册</string>
    <string name="login_hint_get_code">获取验证码</string>
    <string name="login_hint_get_reGetCode">重发(%s)s</string>
    <string name="login_text_protocol">《车利多用户协议》</string>
    <string name="login_text_protocol_agree">已阅读并同意</string>
    <string name="error_internet">网络错误</string>
    <string name="forget_pwd_confirm">确定找回</string>
    <string name="forget_pwd_title">找回密码</string>
    <string name="main_tab_1">买车险送积分</string>
    <string name="main_tab_2">积分兑换</string>
    <string name="main_tab_3">广告专区</string>
    <string name="main_tab_4">宝藏领取</string>
    <string name="main_tab_5">红包领取</string>
    <string name="main_tab_6">商家活动</string>
    <string name="main_hot_recommend">热销推荐</string>
    <string name="main_see_all">查看全部</string>
    <string name="main_hot_info">热点资讯</string>
    <string name="main_hot_msg">首页热销图片</string>
    <string name="main_store_type_0">积分兑换</string>
    <string name="main_store_type_1">车利多服务</string>
    <string name="main_store_type_2">其他商品</string>
    <string name="main_store_score_exchange">立即兑换</string>
    <string name="main_store_goods_buy">立即购买</string>
    <string name="main_store_service_price">价格:￥</string>
    <string name="CNY">￥</string>
    <string name="YUAN">元</string>
    <string name="SCORE">积分</string>
    <string name="UNIT_SCORE">分</string>
    <string name="DAY">天</string>
    <string name="KM">km</string>
    <string name="footer_footer_text">- 车利多为你提供优质服务 -</string>
    <string name="footer_score_store">所有售卖或兑换商品最终解释权归车利多所有</string>
    <string name="score_goods_detail_goodsName">商品详情</string>
    <string name="score_goods_detail_goodsInfo">商品简介</string>
    <string name="score_goods_detail_chooseType">选择 商品规格</string>
    <string name="score_goods_detail_confirm">确认兑换</string>
    <string name="score_confirm_address">收货地址</string>
    <string name="score_confirm_name">兑换商品</string>
    <string name="score_confirm_address_people">收货人：</string>
    <string name="score_confirm_address_detail">地址：</string>
    <string name="score_confirm_unit_price">单价</string>
    <string name="score_confirm_goodsCount">数量</string>
    <string name="score_confirm_goodsType">规格</string>
    <string name="score_confirm_goodsTotalScore">待支付总价</string>
    <string name="score_confirm_goodsCanUseScore">当前可用积分</string>
    <string name="score_pay_success">恭喜你，兑换成功</string>
    <string name="score_pay_failed">兑换失败!</string>
    <string name="score_pay_failed_default_reason">抱歉，您当前积分不足~</string>
    <string name="hint_default">——</string>
    <string name="classify_pop_score_confirm">确定</string>
    <string name="classify_pop_chooseStr">已选择 </string>
    <string name="classify_pop_chooseStr_default">已选择 默认</string>
    <string name="classify_pop_chooseStr_please">请选择 </string>
    <string name="classify_pop_addCar">加入购物车</string>
    <string name="classify_pop_buyNow">立即购买</string>
    <string name="classify_pop_buyCount">购买数量</string>
    <string name="classify_pop_inventory">库存%s件</string>
    <string name="classify_pop_noInventory">暂无库存</string>
    <string name="classify_pop_toast_chooseType">请选择商品类型</string>
    <string name="classify_pop_toast_noInventory">没有库存了</string>
    <string name="classify_pop_toast_outOfDex">超出数量范围!</string>
    <string name="service_list_name">车利多服务</string>
    <string name="service_list_classify_default">全部分类</string>
    <string name="service_list_sort_default">综合排序</string>
    <string name="service_list_serviceGoods_offerPrice">新客最高减%s元</string>
    <string name="service_list_serviceGoods_soldCount">已售</string>
    <string name="service_list_serviceGoods_soldCount_unit">%1$s.%2$s万</string>
    <string name="service_shop_name">店铺</string>
    <string name="service_shop_type">服务类型(%s)</string>
    <string name="service_shop_comment">评价(%s)</string>
    <string name="service_goods_oldPrice">原价：￥</string>
    <string name="service_shop_goods_footer">查看其它%s个服务</string>
    <string name="service_comment_score">打分</string>
    <string name="service_comment_list_name">用户评价</string>
    <string name="service_detail_confirm">立即抢购</string>
    <string name="service_shop_info">商家信息</string>
    <string name="service_detail_name">服务详情</string>
    <string name="service_detail_detail">查看图文详情</string>
    <string name="service_detail_buyNeedKnow">购买须知</string>
    <string name="service_detail_return">有效期内退款</string>
    <string name="service_detail_other">其他服务</string>
    <string name="service_detail_commentCount">%s条评价</string>
    <string name="service_confirm_name">提交订单</string>
    <string name="service_confirm_count">数量</string>
    <string name="service_confirm_price">小计</string>
    <string name="service_confirm_confirm">提交订单</string>
    <string name="pay_we_chat">微信支付</string>
    <string name="pay_Ali">支付宝支付</string>
    <string name="pay_balance">余额支付</string>
    <string name="pay_service_leftTime">支付剩余时间</string>
    <string name="pay_service_name">支付订单</string>
    <string name="pay_service_confirm">确认支付</string>
    <string name="pay_service_result_name">支付结果</string>
    <string name="pay_service_result_confirm">完成</string>
    <string name="pay_check_failed">服务器验证支付失败，请联系平台</string>
    <string name="pay_service_result_success">购买成功</string>
    <string name="pay_service_result_more">看了本套餐的用户还看了</string>
    <string name="pay_methods_totalPrice">待支付金额：</string>
    <string name="search_goods_hint">搜索商品</string>
    <string name="search_goods_result_name">其他商品</string>
    <string name="score_goods_detail_unit">单价：%s个积分</string>
    <string name="goods_detail_oldPrice">价格￥%s</string>
    <string name="goods_detail_expressPrice">快递：%s</string>
    <string name="goods_detail_soldCount">销量%s笔</string>
    <string name="goods_detail_coupon">领取优惠券</string>
    <string name="goods_detail_redPacket">领取红包</string>
    <string name="goods_detail_comment">宝贝评价(%s)</string>
    <string name="goods_detail_web">宝贝详情</string>
    <string name="goods_detail_store">店铺</string>
    <string name="goods_detail_favorite">收藏</string>
    <string name="goods_detail_addCar">加入购物车</string>
    <string name="goods_detail_confirm">立即购买</string>
    <string name="goods_detail_name">商品详情</string>
    <string name="goods_detail_pass">已下架</string>
    <string name="goods_detail_coupon_info">满%s使用</string>
    <string name="goods_detail_coupon_time">有效期 %s</string>
    <string name="goods_detail_coupon_confirm">立刻领取</string>
    <string name="goods_detail_coupon_close">关闭</string>
    <string name="goods_detail_redPacket_info">订单金额满%s元使用</string>
    <string name="goods_detail_redPacket_type">店铺红包</string>
    <string name="goods_detail_redPacket_get">已领%s张</string>
    <string name="goods_detail_redPacket_get_yet">未领%s张</string>
    <string name="goods_detail_redPacket_confirm">点击领取</string>
    <string name="goods_detail_coupon_title">店铺优惠券</string>
    <string name="goods_detail_redPacket_title">店铺红包</string>
    <string name="goods_shop_name">店铺</string>
    <string name="goods_shop_classifyName">店铺分类</string>
    <string name="goods_shop_search_hint">搜索店铺内商品</string>
    <string name="goods_shop_tag">平台自营</string>
    <string name="goods_shop_favoriteCount">%s人关注</string>
    <string name="goods_shop_favorite_add">+ 关注</string>
    <string name="goods_shop_favorite_remove">已关注</string>
    <string name="goods_shop_allGoods">全部商品</string>
    <string name="goods_shop_newGoods">上新</string>
    <string name="goods_shop_hotGoods">热销</string>
    <string name="goods_shop_newGoodsList">最近上新</string>
    <string name="goods_shop_hotGoodsList">热销商品</string>
    <string name="goods_shop_detail">店铺详情</string>
    <string name="goods_shop_classify">商品分类</string>
    <string name="goods_shop_phone">联系卖家</string>
    <string name="ads_name">广告专区</string>
    <string name="red_packet_name">红包专区</string>
    <string name="action_notifications">消息</string>
    <string name="action_settings">设置</string>
    <string name="mine_order_tab1">待付款</string>
    <string name="mine_order_tab2">待收货</string>
    <string name="mine_order_tab3">待评价</string>
    <string name="mine_order_tab4">退货退款</string>
    <string name="mine_order_tab5">全部订单</string>
    <string name="mine_myProperty">我的资产</string>
    <string name="mine_balance">余额</string>
    <string name="mine_tab_card">卡券包</string>
    <string name="unit_piece">%s张</string>
    <string name="unit_individual">%s个</string>
    <string name="mine_tab_coupon">优惠券</string>
    <string name="mine_tab_redPacket">红包</string>
    <string name="mine_tab_score">积分</string>
    <string name="mine_tab_favoriteGoods">收藏商品</string>
    <string name="mine_tab_favoriteShop">关注店铺</string>
    <string name="mine_tab_myComment">我的评价</string>
    <string name="mine_tab_history">我的足迹</string>
    <string name="mine_guarantee_slip">我的保单</string>
    <string name="mine_applyFor_openShop">申请开店</string>
    <string name="mine_promotions">我的活动</string>
    <string name="settings_name">设置</string>
    <string name="settings_person">个人信息</string>
    <string name="settings_security">账户安全</string>
    <string name="settings_aboutUs">关于我们</string>
    <string name="settings_QR">我的二维码</string>
    <string name="settings_exit">退出登录</string>
    <string name="person_info_header">会员头像</string>
    <string name="person_info_phone">手机号</string>
    <string name="person_info_gender">性别</string>
    <string name="person_info_address">我的收货地址</string>
    <string name="account_name">账户与安全</string>
    <string name="account_pwd_set">设置支付密码</string>
    <string name="account_pwd_forget">忘记支付密码</string>
    <string name="account_pwd_null">暂无法忘记支付密码</string>
    <string name="account_pwd_change_login">修改登录密码</string>
    <string name="account_pwd_pay_change">修改支付密码</string>
    <string name="reset_pwd_name">修改登录U密码</string>
    <string name="reset_pwd_old">原密码</string>
    <string name="reset_pwd_new">新密码</string>
    <string name="reset_pwd_new_again">再输入一次新密码</string>
    <string name="reset_pwd_confirm">确认修改</string>
    <string name="balance_mine">我的余额</string>
    <string name="balance_recharge">充值</string>
    <string name="balance_deposit">申请提现</string>
    <string name="balance_change">余额变更记录</string>
    <string name="balance_recharge_name">余额充值</string>
    <string name="balance_withdrawal_name">申请提现</string>
    <string name="balance_record_name">余额变动记录</string>
    <string name="withdrawal_can_price">账户可提现金额</string>
    <string name="withdrawal_price">输入提现金额</string>
    <string name="withdrawal_cardNum">输入银行卡号</string>
    <string name="withdrawal_bankName">输入开户行名称</string>
    <string name="withdrawal_bankAddress">输入开户行地址</string>
    <string name="withdrawal_cardUserName">输入持卡人姓名</string>
    <string name="withdrawal_cardUserPhone">输入持卡人手机号</string>
    <string name="withdrawal_confirm">提交申请</string>
    <string name="card_package_list_name">卡券包</string>
    <string name="card_package_list_count">数量：%s</string>
    <string name="card_package_list_price">金额：</string>
</resources>