<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    android:background="@mipmap/icon_goods_detail_coupon_bg"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:text="@string/goods_detail_coupon_confirm"
        android:textColor="@color/White"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@id/tv_confirm"
        android:background="@mipmap/icon_goods_detail_coupon_lin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/iv_line"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@id/iv_line"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CNY"
                android:textColor="@color/White"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_couponPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text=""
                android:minWidth="@dimen/margin_40"
                tool:background="@color/MaterialGrey200"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_couponInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/goods_detail_coupon_info"
            android:textColor="@color/White"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_couponTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/goods_detail_coupon_time"
            android:textColor="@color/White"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>