<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnableHeaderTranslationContent="true"
        app:srlEnablePreviewInEditMode="false"
        app:srlHeaderHeight="150dp"
        app:srlHeaderMaxDragRate="1">

        <View
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAccentColor="@android:color/black" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:paddingTop="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@color/White"
                    android:padding="@dimen/margin_15">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/White"
                        android:drawablePadding="@dimen/margin_5"
                        android:drawableStart="@mipmap/icon_balance_withdrawal"
                        android:gravity="center_vertical"
                        android:text="@string/withdrawal_can_price"
                        android:textColor="@color/MaterialGrey600"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/margin_5"
                        android:background="@color/White"
                        android:gravity="center_vertical"
                        android:text="@string/CNY"
                        android:textColor="@color/Red"
                        android:textSize="14sp" />
                </LinearLayout>

                <com.szw.framelibrary.view.ClearWriteEditText
                    android:id="@+id/tv_withdrawal_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@color/White"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/withdrawal_price"
                    android:inputType="number"
                    android:lines="1"
                    android:padding="@dimen/margin_15"
                    android:textColor="@color/MaterialGrey600"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="15sp" />

                <com.szw.framelibrary.view.ClearWriteEditText
                    android:id="@+id/tv_withdrawal_cardNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_0.5"
                    android:background="@color/White"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/withdrawal_cardNum"
                    android:inputType="number"
                    android:lines="1"
                    android:padding="@dimen/margin_15"
                    android:textColor="@color/MaterialGrey600"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="15sp" />

                <com.szw.framelibrary.view.ClearWriteEditText
                    android:id="@+id/tv_withdrawal_bankName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_0.5"
                    android:background="@color/White"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/withdrawal_bankName"
                    android:lines="1"
                    android:padding="@dimen/margin_15"
                    android:textColor="@color/MaterialGrey600"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="15sp" />

                <com.szw.framelibrary.view.ClearWriteEditText
                    android:id="@+id/tv_withdrawal_bankAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_0.5"
                    android:background="@color/White"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/withdrawal_bankAddress"
                    android:lines="1"
                    android:padding="@dimen/margin_15"
                    android:textColor="@color/MaterialGrey600"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="15sp" />

                <com.szw.framelibrary.view.ClearWriteEditText
                    android:id="@+id/tv_withdrawal_cardUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_0.5"
                    android:background="@color/White"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/withdrawal_cardUserName"
                    android:lines="1"
                    android:padding="@dimen/margin_15"
                    android:textColor="@color/MaterialGrey600"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="15sp" />

                <com.szw.framelibrary.view.ClearWriteEditText
                    android:id="@+id/tv_withdrawal_cardUserPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_0.5"
                    android:background="@color/White"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/withdrawal_cardUserPhone"
                    android:inputType="phone"
                    android:lines="1"
                    android:padding="@dimen/margin_15"
                    android:textColor="@color/MaterialGrey600"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="15sp" />


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <TextView
        android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/margin_15"
        android:text="@string/withdrawal_confirm"
        android:textColor="@color/White"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent" />

    <include layout="@layout/action_bar_custom" />
</android.support.constraint.ConstraintLayout>
